--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,9 @@
     "require": {
         "slim/slim": "^3.0@RC",
         "illuminate/database": "5.1.*",
-        "robmorgan/phinx": "0.4.*"
+        "robmorgan/phinx": "0.4.*",
+        "slim/twig-view": "^2.0",
+        "ircmaxell/random-lib": "^1.1"
     },
   "autoload": {
     "psr-4": {
