--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "require": {
-        "slim/slim": "^3.0@RC",
+        "slim/slim": "3.x-dev",
         "illuminate/database": "5.1.*",
         "robmorgan/phinx": "0.4.*",
         "slim/twig-view": "^2.0",
@@ -10,5 +10,8 @@
     "psr-4": {
       "Sprintboard\\": "src"
     }
-  }
+  },
+    "require-dev": {
+        "symfony/var-dumper": "^2.7"
+    }
 }
