--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A board for organizing sprint tasks",
   "main": "index.js",
   "dependencies": {
+    "angular-ui-bootstrap": "^0.14.3",
     "bootstrap-sass": "^3.3.5",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
