--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "angular-ui-bootstrap": "^0.14.3",
     "bootstrap-sass": "^3.3.5",
     "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.1.0",
+    "gulp-autoprefixer": "2.3.1",
     "gulp-sass": "^2.1.0"
   },
   "scripts": {
