--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "angular": "^1.4.7",
     "angular-ui-bootstrap": "^0.14.3",
     "bootstrap-sass": "^3.3.5",
+    "grunt": "^0.4.5",
+    "grunt-cache-bust": "^0.6.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "2.3.1",
-    "gulp-sass": "^2.1.0"
+    "gulp-grunt": "^0.5.3",
+    "gulp-sass": "^2.1.0",
+    "run-sequence": "^1.1.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
