--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "gulp-autoprefixer": "2.3.1",
     "gulp-grunt": "^0.5.3",
     "gulp-sass": "^2.1.0",
-    "run-sequence": "^1.1.4"
+    "run-sequence": "^1.1.4",
+    "underscore": "^1.8.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
