--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
         "illuminate/database": "5.1.*",
         "robmorgan/phinx": "0.4.*",
         "slim/twig-view": "^2.0",
-        "ircmaxell/random-lib": "^1.1"
+        "ircmaxell/random-lib": "^1.1",
+        "doctrine/dbal": "^2.5"
     },
   "autoload": {
     "psr-4": {
