--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "robmorgan/phinx": "0.4.*",
         "slim/twig-view": "^2.0",
         "ircmaxell/random-lib": "^1.1",
-        "doctrine/dbal": "^2.5"
+        "doctrine/dbal": "^2.5",
+        "nesbot/carbon": "^1.21"
     },
   "autoload": {
     "psr-4": {
