--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-autoprefixer": "2.3.1",
     "gulp-grunt": "^0.5.3",
     "gulp-sass": "^2.1.0",
+    "moment": "^2.10.6",
     "run-sequence": "^1.1.4",
     "underscore": "^1.8.3"
   },
