--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "slim/twig-view": "^2.0",
         "ircmaxell/random-lib": "^1.1",
         "doctrine/dbal": "^2.5",
-        "nesbot/carbon": "^1.21"
+        "nesbot/carbon": "^1.21",
+        "slim/http-cache": "^0.3.0"
     },
   "autoload": {
     "psr-4": {
