--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "2.3.1",
     "gulp-grunt": "^0.5.3",
+    "gulp-inject": "^3.0.0",
     "gulp-sass": "^2.1.0",
     "moment": "^2.10.6",
     "run-sequence": "^1.1.4",
